# nic-metadata-cleaning

./: kpi.txt  main.py  nic_sample_dataset.csv  pyproject.toml  requirements.txt
data/dcat_transformed/: dcat_catalog_mapping.csv  dcat_dataset_mapping.csv  dcat_distribution_mapping.csv
data/dublin_core_transformed/: dublin_core_catalog_mapping.csv  (+3 more)
notebooks/: dublin_core_mapped.csv  dublin_core_mapped_2.csv  evaluation_details.csv  kpi_evaluation.ipynb  metadata_transformation.ipynb  spacy.ipynb
pii_test/: eda.py  eda_test_cnn.py  eda_test_transformer.py
presidio_test/: EDA_2.py
sample_catalog_metadata/: NIC_metadata_curation_master.xlsx  nic_sample_catalog.csv
sample_datasets_metadata/: sample_dataset_nic.csv
sample_downloaded_files/: CrudeOilProcessing.csv  Cyclone_Details_IMD_2017.csv  Date-Wise-Prices-all-Commodity.xml  District-wise_Health_Care_Infrastructure-2017_1.csv  EightCoreData.csv  EightCoreData_yearly.csv  GDP_QE_Current_Prices_2011-12_Series.csv  HMIS-Assam-Cachar-Apr-2019-20.csv  Listofstartups.csv_VersionId=105172390599553  Percentage_of_households_DLHS4.csv  QES.csv  Statewise_General_Index_july2019_20Aug2020_dec20_2_2.csv_VersionId=105166644746369  Tamilnadu-Table-12_33_liv_stk_cns_2007_1.csv  dipp.csv  enrolment_age_2012_13.csv_VersionId=105166644224513  enrolment_age_2019_20.csv_VersionId=105166644598849  eshram_sample_0.csv  my_calls_1.csv  reservoir-cwc-jan22_1.csv  soil_moisture-jan22_0.csv  uam_msme_total_manufacturing_unit.csv  udyamsampledata.csv  youth-hostel.csv
utils/: bulk_dataset_downloader.py  duckdb.py  kpi_calculator.py
(+8 files in other folders)
