[project]
name = "nic-metadata-cleaning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "presidio-analyzer>=2.2.359",
    "presidio-anonymizer>=2.2.359",
    "presidio-evaluator>=0.2.4",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
    "wordcloud>=1.9.4",
]
